--- a/index.html
+++ b/index.html
@@ -1,149 +1,281 @@
+
 <!DOCTYPE html>
 <html lang="ru">
 <head>
   <meta charset="UTF-8" />
-  <title>VK Cash Roulette</title>
+  <title>Крутани и Забери</title>
   <style>
     body {
-      font-family: sans-serif;
-      background: #0e0e0e;
-      color: white;
+      margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #1a1a2e;
+      color: #fff;
       text-align: center;
-      padding: 30px;
     }
-
+    .overlay {
+      padding: 40px 20px;
+      min-height: 100vh;
+    }
+    h1 {
+      font-size: 40px;
+      margin-bottom: 30px;
+    }
+    #wheel-container {
+      margin: 0 auto;
+      width: 320px;
+      height: 320px;
+    }
     #wheel {
-      width: 300px;
-      height: 300px;
-      border: 10px solid #fff;
+      width: 100%;
+      height: 100%;
       border-radius: 50%;
-      margin: 20px auto;
-      position: relative;
-      background: conic-gradient(#2ecc71 0% 20%, #e74c3c 20% 40%, #3498db 40% 60%, #f1c40f 60% 80%, #9b59b6 80% 100%);
-      transition: transform 4s ease-out;
+      border: 10px solid #FFD700;
+      background: conic-gradient(
+        #e74c3c 0deg 90deg,
+        #f1c40f 90deg 180deg,
+        #2ecc71 180deg 270deg,
+        #3498db 270deg 360deg
+      );
+      transition: transform 5s cubic-bezier(0.33, 1, 0.68, 1);
     }
-
-    #spin {
-      padding: 10px 20px;
-      font-size: 18px;
-      background: #3498db;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-      margin-top: 15px;
-    }
-
-    #result {
+    button {
+      margin-top: 30px;
       font-size: 20px;
-      margin-top: 20px;
-    }
-
-    .top-bar {
-      font-size: 14px;
-      margin-top: 50px;
-      color: #aaa;
-    }
-
-    .code-block {
-      margin-top: 10px;
-      font-family: monospace;
-      background: #1f1f1f;
-      padding: 10px;
-      border-radius: 5px;
-    }
-
-    #payBtn {
-      display: none;
-      margin-top: 15px;
-      background-color: #2ecc71;
-      color: white;
-      padding: 12px 24px;
+      padding: 10px 30px;
+      background-color: #FFD700;
       border: none;
-      border-radius: 5px;
-      font-size: 16px;
+      color: black;
+      border-radius: 8px;
       cursor: pointer;
     }
-
-    #firstSpinNotice {
-      font-size: 14px;
-      color: #ccc;
-      margin-top: 10px;
+    button:disabled {
+      background-color: #888;
+      cursor: not-allowed;
+    }
+    .result {
+      font-size: 28px;
+      margin-top: 40px;
+      font-weight: bold;
+    }
+    .sidebar {
+      background: rgba(255, 255, 255, 0.1);
+      padding: 20px;
+      margin-top: 50px;
+      border-radius: 10px;
+    }
+    .info-buttons {
+      margin-top: 30px;
+    }
+    .info-buttons button {
+      margin: 5px;
+      padding: 10px 20px;
+      background-color: #333;
+      color: white;
+      border: none;
+      border-radius: 5px;
+    }
+    #modal {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background: rgba(0,0,0,0.8);
+      display: none;
+      justify-content: center;
+      align-items: center;
+      z-index: 1000;
+    }
+    #modalContent {
+      background: #222;
+      padding: 30px;
+      max-width: 90%;
+      max-height: 80%;
+      overflow-y: auto;
+      border-radius: 10px;
+      text-align: left;
+    }
+    #modalContent h2 {
+      text-align: center;
+      margin-top: 0;
+    }
+    #modalClose {
+      margin-top: 20px;
+      background-color: #FFD700;
+      color: black;
     }
   </style>
 </head>
 <body>
-  <h1>🎰 Рулетка VK Cash</h1>
-  <div id="wheel"></div>
-  <button id="spin">Крутить колесо</button>
-  <div id="result"></div>
-  <div id="firstSpinNotice">* Первая попытка всегда выигрывает</div>
-  <button id="payBtn">Попробовать ещё за 50₽</button>
+<div class="overlay">
+  <h1>Крутани и Забери</h1>
 
-  <div class="top-bar">
-    <p>📜 <a href="#">Правила участия</a> • <a href="#">FAQ</a> • <a href="#">Политика</a></p>
-    <p>👑 Топ победители обновляются каждые 5 минут</p>
-    <p>🔁 Участников: <span id="playersCount"></span></p>
+  <div id="wheel-container">
+    <div id="wheel"></div>
   </div>
 
-  <script>
-    const wheel = document.getElementById("wheel");
-    const result = document.getElementById("result");
-    const spinBtn = document.getElementById("spin");
-    const payBtn = document.getElementById("payBtn");
-    let hasSpun = false;
+  <button id="spinBtn" onclick="spin()">Крутить</button>
+  <div class="result" id="result"></div>
 
-    function generateCode(amount) {
-      const timestamp = Date.now();
-      const random = Math.random().toString(36).substring(2, 6).toUpperCase();
-      return `CODE-${amount}-${timestamp}-${random}`;
+  <button id="payBtn" onclick="unlock()" style="display:none;">Попробовать снова за 50₽</button>
+
+  <div class="sidebar">
+    <h3>ТОП Победителей дня:</h3>
+    <ul id="topWinners">
+      <li>🧑 Алексей — 500₽</li>
+      <li>👩 Мария — 100₽</li>
+      <li>🧔 Игорь — 50₽</li>
+    </ul>
+    <p>🧮 Участников сегодня: <span id="userCount">17</span></p>
+  </div>
+
+  <div class="info-buttons">
+    <button onclick="showModal('rules')">📜 Правила участия</button>
+    <button onclick="showModal('faq')">❓ FAQ</button>
+    <button onclick="showModal('policy')">📋 Политика</button>
+    <button onclick="showModal('share')">📲 Поделиться</button>
+  </div>
+</div>
+
+<div id="modal">
+  <div id="modalContent">
+    <h2 id="modalTitle"></h2>
+    <div id="modalText"></div>
+    <button id="modalClose" onclick="closeModal()">Закрыть</button>
+  </div>
+</div>
+
+<script>
+  let spinning = false;
+  let currentRotation = 0;
+  let userCount = 17;
+  let canSpin = true;
+  const adminMode = true;
+  let firstSpin = true;
+
+  const wheel = document.getElementById("wheel");
+  const resultEl = document.getElementById("result");
+  const spinBtn = document.getElementById("spinBtn");
+  const payBtn = document.getElementById("payBtn");
+  const userCountEl = document.getElementById("userCount");
+  const topWinners = document.getElementById("topWinners");
+
+  function getPrize() {
+    if (firstSpin) return 50;
+    const chances = [
+      { prize: 0, chance: 75 },
+      { prize: 50, chance: 15 },
+      { prize: 100, chance: 7 },
+      { prize: 500, chance: 3 }
+    ];
+    const rand = Math.random() * 100;
+    let cumulative = 0;
+    for (let i = 0; i < chances.length; i++) {
+      cumulative += chances[i].chance;
+      if (rand < cumulative) return chances[i].prize;
     }
+    return 0;
+  }
 
-    function spinWheel() {
-      let deg = Math.floor(3600 + Math.random() * 1000);
-      wheel.style.transform = `rotate(${deg}deg)`;
+  function spin() {
+    if (spinning || (!canSpin && !adminMode)) return;
 
-      setTimeout(() => {
-        let win = false;
-        let amount = 0;
+    spinning = true;
+    spinBtn.disabled = true;
+    resultEl.innerHTML = "Крутим...";
 
-        if (!hasSpun) {
-          win = true;
-          amount = 50;
-        } else {
-          const chance = Math.random();
-          if (chance < 0.25) {
-            win = true;
-            amount = [50, 100, 200, 300][Math.floor(Math.random() * 4)];
-          }
-        }
+    const prize = getPrize();
+    const sector = prize === 0 ? 0 : prize === 50 ? 1 : prize === 100 ? 2 : 3;
+    const stopAngle = 360 * 5 + sector * 90 + 45;
+    currentRotation += stopAngle;
 
-        if (win) {
-          const code = generateCode(amount);
-          result.innerHTML = `🎉 Поздравляем! Вы выиграли <b>${amount}₽</b><br><div class="code-block">${code}</div>`;
-        } else {
-          result.innerText = "😢 Увы, вы ничего не выиграли";
-        }
+    wheel.style.transform = `rotate(${currentRotation}deg)`;
 
-        hasSpun = true;
-        spinBtn.style.display = "none";
+    setTimeout(() => {
+      resultEl.innerHTML = prize === 0 ? "Увы, не повезло." : `🎉 Ты выиграл ${prize}₽!`;
+      spinning = false;
+      if (!adminMode) {
+        canSpin = false;
         payBtn.style.display = "inline-block";
-      }, 4000);
+      }
+      spinBtn.disabled = !adminMode;
+      userCount += Math.floor(Math.random() * 3) + 1;
+      userCountEl.textContent = userCount;
+      firstSpin = false;
+    }, 5000);
+  }
+
+  function unlock() {
+    canSpin = true;
+    spinBtn.disabled = false;
+    payBtn.style.display = "none";
+  }
+
+  const names = ["Алексей", "Мария", "Игорь", "Светлана", "Денис", "Ольга", "Сергей", "Екатерина"];
+  const prizesFake = [50, 100, 500];
+
+  setInterval(() => {
+    const ul = topWinners;
+    ul.innerHTML = "";
+    for (let i = 0; i < 3; i++) {
+      const name = names[Math.floor(Math.random() * names.length)];
+      const prize = prizesFake[Math.floor(Math.random() * prizesFake.length)];
+      ul.innerHTML += `<li>👤 ${name} — ${prize}₽</li>`;
     }
+  }, 30000);
 
-    spinBtn.onclick = spinWheel;
+  const modal = document.getElementById("modal");
+  const modalTitle = document.getElementById("modalTitle");
+  const modalText = document.getElementById("modalText");
 
-    payBtn.onclick = () => {
-      window.location.href = "https://pay.freekassa.ru?m=F7202575639398546&oa=50&currency=RUB&us_site=vk-cash";
+  function showModal(type) {
+    const content = {
+      rules: [
+        "1. Каждый пользователь может один раз бесплатно попытать удачу.",
+        "2. Для повторной попытки необходимо внести оплату.",
+        "3. Система случайным образом определяет результат крутки.",
+        "4. Деньги перечисляются в соответствии с инструкцией после выигрыша.",
+        "5. Попытки накрутки или взлома приведут к блокировке.",
+        "6. Организатор оставляет за собой право вносить изменения в правила без уведомления."
+      ],
+      faq: [
+        "<b>Как работает игра?</b><br>Вы нажимаете кнопку, колесо крутится и случайным образом определяет ваш приз.",
+        "<b>Что нужно, чтобы играть повторно?</b><br>Необходимо внести небольшую плату — после этого доступна новая попытка.",
+        "<b>Как получить выигрыш?</b><br>После выигрыша следуйте инструкции на экране.",
+        "<b>Можно ли играть бесплатно?</b><br>Да, первая попытка предоставляется бесплатно.",
+        "<b>Выигрыш гарантирован?</b><br>Нет. Все результаты определяются случайным образом."
+      ],
+      policy: [
+        "1. Сайт является развлекательным сервисом.",
+        "2. Результаты не гарантированы и определяются генератором случайных чисел.",
+        "3. Администрация не несёт ответственности за ошибочные ожидания пользователя.",
+        "4. Все выигрыши проверяются вручную перед выплатой.",
+        "5. Возврат средств невозможен после участия."
+      ],
+      share: [
+        "Поделись с друзьями и получи бонус!",
+        "Скопируй и отправь им эту ссылку:<br><b>https://chatgpt4142141241241.github.io/vk-cash-test/</b>",
+        "Или нажми на кнопку ниже:", "<button onclick="copyLink()">🔗 Скопировать ссылку</button>", "<div id="copyMsg"></div>",
+        "👥 Приглашай друзей и получай +1 крутку за каждого участника!"
+      ]
     };
 
-    function updatePlayersCount() {
-      const count = Math.floor(100 + Math.random() * 50);
-      document.getElementById("playersCount").innerText = count;
-    }
+    modalTitle.innerText = {
+      rules: "Правила участия",
+      faq: "FAQ",
+      policy: "Политика",
+      share: "Поделиться"
+    }[type];
 
-    setInterval(updatePlayersCount, 15000);
-    updatePlayersCount();
-  </script>
+    modalText.innerHTML = "<ul><li>" + content[type].join("</li><li>") + "</li></ul>";
+    modal.style.display = "flex";
+  }
+
+  function closeModal() {
+    modal.style.display = "none";
+  }
+
+  function copyLink() {
+    const link = "https://chatgpt4142141241241.github.io/vk-cash-test/";
+  }
+</script>
 </body>
 </html>
