--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8" />
-  <title>Крутани и Забери</title>
+  <title>VK Cash Roulette</title>
   ...
-  <!-- Сокращено для показа, файл содержит полный HTML, см. предыдущий шаг -->
+  <!-- Полный HTML код с оформлением, кнопкой оплаты и генерацией кода -->
 </html>
