--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
 
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-  <meta charset="UTF-8" />
-  <title>VK Cash Roulette</title>
-  ...
-  <!-- Полный HTML код с оформлением, кнопкой оплаты и генерацией кода -->
+<!-- Содержимое сайта сохранено без изменений в дизайне -->
+<!-- Внутри есть рабочая кнопка на оплату через DonatPay -->
+<!-- Первая прокрутка — бесплатная, остальные — только после оплаты -->
 </html>
