--- a/index.html
+++ b/index.html
@@ -1,90 +1,56 @@
-<!DOCTYPE html>
 
+<!DOCTYPE html>
 <html lang="ru">
 <head>
-<meta charset="utf-8"/>
-<title>VK Cash Roulette</title>
-<style>
+  <meta charset="UTF-8" />
+  <title>Крутани и Забери</title>
+  <style>
     body {
-      font-family: sans-serif;
-      background: #0e0e0e;
-      color: white;
+      margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #1a1a2e;
+      color: #fff;
       text-align: center;
-      padding: 30px;
     }
-
-    #wheel {
-      width: 300px;
-      height: 300px;
-      border: 10px solid #fff;
-      border-radius: 50%;
-      margin: 20px auto;
-      position: relative;
-      background: conic-gradient(#2ecc71 0% 20%, #e74c3c 20% 40%, #3498db 40% 60%, #f1c40f 60% 80%, #9b59b6 80% 100%);
-      transition: transform 4s ease-out;
+    .overlay {
+      padding: 40px 20px;
+      min-height: 100vh;
     }
-
-    #spin {
-      padding: 10px 20px;
-      font-size: 18px;
-      background: #3498db;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-      margin-top: 15px;
+    h1 {
+      font-size: 40px;
+      margin-bottom: 30px;
     }
-
-    #result {
-      font-size: 20px;
-      margin-top: 20px;
-    }
-
-    .top-bar {
-      font-size: 14px;
-      margin-top: 50px;
-      color: #aaa;
-    }
-
-    .code-block {
-      margin-top: 10px;
-      font-family: monospace;
-      background: #1f1f1f;
-      padding: 10px;
-      border-radius: 5px;
-    }
-
-    #payBtn {
-      display: none;
-      margin-top: 15px;
-      background-color: #2ecc71;
-      color: white;
-      padding: 12px 24px;
-      border: none;
-      border-radius: 5px;
-      font-size: 16px;
-      cursor: pointer;
-    }
-
-    #firstSpinNotice {
-      font-size: 14px;
-      color: #ccc;
-      margin-top: 10px;
+    #wheel-container {
+      margin: 0 auto;
+      width: 320px;
+      height: 320px;
     }
   </style>
 </head>
 <body>
-<h1>🎰 Рулетка VK Cash</h1>
-<div id="wheel"></div>
-<button id="spin">Крутить колесо</button>
-<div id="result"></div>
-<div id="firstSpinNotice">* Первая попытка всегда выигрывает</div>
-<button id="payBtn">Попробовать ещё за 50₽</button>
-<div class="top-bar">
-<p>📜 <a href="#">Правила участия</a> • <a href="#">FAQ</a> • <a href="#">Политика</a></p>
-<p>👑 Топ победители обновляются каждые 5 минут</p>
-<p>🔁 Участников: <span id="playersCount"></span></p>
-</div>
+  <div class="overlay">
+    <h1>Крутани и Забери</h1>
+    <div id="wheel-container">
+      <!-- Добавим элементы колеса и функционал для выигрыша -->
+      <button id="spin-button">Крутить</button>
+    </div>
+    <div id="result"></div>
+    <div id="code"></div>
+  </div>
 
+  <script>
+    document.getElementById("spin-button").addEventListener("click", function() {
+      let winnings = Math.random() > 0.5 ? 50 : 0;  // 50% шанс на выигрыш
+      let secretCode = "";
+      if (winnings === 50) {
+        // Генерация секретного кода
+        secretCode = "код-" + Math.random().toString(36).substring(2, 15);
+      }
+
+      let resultMessage = winnings === 50 ? "Вы выиграли 50₽!" : "Вы ничего не выиграли.";
+      document.getElementById("result").textContent = resultMessage;
+      document.getElementById("code").textContent = secretCode ? "Секретный код: " + secretCode : "";
+    });
+  </script>
 </body>
 </html>
