--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     spinBtn.onclick = spinWheel;
 
     payBtn.onclick = () => {
-      window.location.href = "https://pay.freekassa.ru?m=F7202575639398546&oa=50&currency=RUB&us_site=vk-cash";
+      window.location.href = "https://widget.donatepay.ru/widgets/page/7549bd7deeb167c930b7ab588b1aa54aa82e2910567619e1a834984b89495cf5?widget_id=6642901&sum=200";
     };
 
     function updatePlayersCount() {
