--- a/index_final_cleaned.html
+++ b/index_final_cleaned.html
@@ -1,90 +1,117 @@
 <!DOCTYPE html>
-
 <html lang="ru">
 <head>
-<meta charset="utf-8"/>
-<title>VK Cash Roulette</title>
-<style>
+  <meta charset="UTF-8">
+  <title>VK Cash</title>
+  <style>
     body {
-      font-family: sans-serif;
-      background: #0e0e0e;
+      margin: 0;
+      background: #111;
+      font-family: Arial, sans-serif;
       color: white;
+      overflow-x: hidden;
+    }
+    .center {
       text-align: center;
-      padding: 30px;
-    }
-
-    #wheel {
-      width: 300px;
-      height: 300px;
-      border: 10px solid #fff;
-      border-radius: 50%;
-      margin: 20px auto;
-      position: relative;
-      background: conic-gradient(#2ecc71 0% 20%, #e74c3c 20% 40%, #3498db 40% 60%, #f1c40f 60% 80%, #9b59b6 80% 100%);
-      transition: transform 4s ease-out;
-    }
-
-    #spin {
-      padding: 10px 20px;
-      font-size: 18px;
-      background: #3498db;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-      margin-top: 15px;
-    }
-
-    #result {
-      font-size: 20px;
-      margin-top: 20px;
-    }
-
-    .top-bar {
-      font-size: 14px;
       margin-top: 50px;
-      color: #aaa;
     }
-
-    .code-block {
-      margin-top: 10px;
-      font-family: monospace;
-      background: #1f1f1f;
-      padding: 10px;
-      border-radius: 5px;
-    }
-
-    #payBtn {
-      display: none;
-      margin-top: 15px;
-      background-color: #2ecc71;
-      color: white;
-      padding: 12px 24px;
+    .btn {
+      padding: 15px 30px;
+      margin: 10px;
       border: none;
-      border-radius: 5px;
-      font-size: 16px;
+      border-radius: 8px;
+      font-size: 18px;
+      cursor: pointer;
+      background-color: #ff9800;
+      color: #000;
+      transition: 0.3s;
+    }
+    .btn:hover {
+      background-color: #ffa726;
+    }
+    .modal {
+      display: none;
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background: rgba(0,0,0,0.7);
+      justify-content: center;
+      align-items: center;
+      z-index: 9999;
+    }
+    .modal-content {
+      background: rgba(20,20,20,0.95);
+      padding: 20px;
+      border-radius: 12px;
+      max-width: 500px;
+      color: #fff;
+    }
+    .close {
+      float: right;
+      font-size: 20px;
       cursor: pointer;
     }
-
-    #firstSpinNotice {
-      font-size: 14px;
-      color: #ccc;
-      margin-top: 10px;
+    .fake-winners {
+      margin-top: 20px;
+      font-size: 16px;
+      line-height: 1.4;
     }
   </style>
 </head>
 <body>
-<h1>🎰 Рулетка VK Cash</h1>
-<div id="wheel"></div>
-<button id="spin">Крутить колесо</button>
-<div id="result"></div>
-<div id="firstSpinNotice">* Первая попытка всегда выигрывает</div>
-<button id="payBtn">Попробовать ещё за 50₽</button>
-<div class="top-bar">
-<p>📜 <a href="#">Правила участия</a> • <a href="#">FAQ</a> • <a href="#">Политика</a></p>
-<p>👑 Топ победители обновляются каждые 5 минут</p>
-<p>🔁 Участников: <span id="playersCount"></span></p>
-</div>
+
+  <div class="center">
+    <h1>🎰 Добро пожаловать в VK Cash!</h1>
+
+    <!-- Кнопка оплаты -->
+    <div style="margin-top: 30px;">
+      <iframe src="https://widget.donatepay.ru/widgets/page/7549bd7deeb167c930b7ab588b1aa54aa82e2910567619e1a834984b89495cf5?widget_id=6642901&sum=50" width="320" height="110" frameBorder="0"></iframe>
+    </div>
+
+    <!-- Кнопка на бота -->
+    <a href="https://t.me/ZaberiMANY_Bot" class="btn">Забрать выигрыш</a>
+
+    <!-- Меню -->
+    <div style="margin-top: 40px;">
+      <button class="btn" onclick="openModal('rules')">📜 Правила участия</button>
+      <button class="btn" onclick="openModal('faq')">📌 FAQ</button>
+      <button class="btn" onclick="openModal('policy')">🛡️ Политика</button>
+    </div>
+
+    <!-- Победители -->
+    <div class="fake-winners" id="winners">Победители загружаются...</div>
+  </div>
+
+  <!-- Модальные окна -->
+  <div id="modal-rules" class="modal"><div class="modal-content"><span class="close" onclick="closeModal('rules')">&times;</span><h3>📜 Правила участия</h3><p>1. Сделай ставку — 50₽.<br>2. Крути колесо — выиграй до 1000₽.<br>3. Забирай выигрыш через бота.<br>4. Одна попытка — один шанс. Удачи!</p></div></div>
+  <div id="modal-faq" class="modal"><div class="modal-content"><span class="close" onclick="closeModal('faq')">&times;</span><h3>📌 Частые вопросы</h3><p><b>Куда приходит выигрыш?</b><br>Через Telegram-бота @ZaberiMANY_Bot<br><b>А если я не выиграл?</b><br>Повезёт в следующий раз, шанс есть у каждого!</p></div></div>
+  <div id="modal-policy" class="modal"><div class="modal-content"><span class="close" onclick="closeModal('policy')">&times;</span><h3>🛡️ Политика</h3><p>Все выигрыши обрабатываются вручную. Мы не храним ваши данные и не передаём их третьим лицам. Участие — добровольное.</p></div></div>
+
+  <script>
+    function openModal(id) {
+      document.getElementById('modal-' + id).style.display = 'flex';
+    }
+    function closeModal(id) {
+      document.getElementById('modal-' + id).style.display = 'none';
+    }
+
+    // Фейковые победители
+    const names = ['Андрей', 'Марина', 'Олег', 'Дмитрий', 'Ксения', 'Юлия', 'Иван', 'Светлана', 'Максим'];
+    const amounts = [100, 250, 500, 300, 200, 150, 400, 50, 1000];
+
+    function generateWinners() {
+      let html = '<h3>🏆 Топ 5 победителей</h3>';
+      for (let i = 0; i < 5; i++) {
+        const name = names[Math.floor(Math.random() * names.length)];
+        const amount = amounts[Math.floor(Math.random() * amounts.length)];
+        html += `💸 ${name} выиграл ${amount}₽<br>`;
+      }
+      document.getElementById('winners').innerHTML = html;
+    }
+
+    generateWinners();
+    setInterval(generateWinners, 5 * 60 * 1000);
+  </script>
 
 </body>
 </html>
