--- a/index.html
+++ b/index.html
@@ -1,127 +1,212 @@
-
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <meta charset="UTF-8">
-    <title>VK CASH</title>
-    <style>
-        body {
-            background-color: #111;
-            color: white;
-            font-family: sans-serif;
-            margin: 0;
-            padding: 0;
-            text-align: center;
-        }
-        .btn {
-            display: inline-block;
-            margin: 20px;
-            padding: 15px 30px;
-            font-size: 18px;
-            background-color: #28a745;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            text-decoration: none;
-        }
-        .modal {
-            display: none;
-            position: fixed;
-            z-index: 999;
-            left: 0;
-            top: 0;
-            width: 100%;
-            height: 100%;
-            overflow: auto;
-            background-color: rgba(0,0,0,0.8);
-        }
-        .modal-content {
-            background-color: #222;
-            margin: 10% auto;
-            padding: 20px;
-            border: 1px solid #888;
-            width: 80%;
-            max-width: 500px;
-            border-radius: 10px;
-        }
-        .close {
-            float: right;
-            font-size: 28px;
-            font-weight: bold;
-            color: white;
-            cursor: pointer;
-        }
-        #winners {
-            margin-top: 30px;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <title>VK Cash</title>
+  <style>
+    body {
+      background: #111;
+      color: #fff;
+      font-family: Arial, sans-serif;
+      text-align: center;
+      margin: 0;
+      padding: 0;
+    }
+    h1 {
+      color: #337aff;
+      padding-top: 30px;
+    }
+    .button {
+      background-color: #00aa40;
+      border: none;
+      color: white;
+      padding: 15px 25px;
+      margin: 10px;
+      font-size: 16px;
+      border-radius: 6px;
+      cursor: pointer;
+      transition: background 0.3s;
+    }
+    .button:hover {
+      background-color: #007a2f;
+    }
+    #wheel {
+      width: 250px;
+      height: 250px;
+      border: 8px solid #00aa40;
+      border-radius: 50%;
+      margin: 20px auto;
+      position: relative;
+      transition: transform 5s cubic-bezier(0.33, 1, 0.68, 1);
+    }
+    #wheel span {
+      position: absolute;
+      width: 50%;
+      height: 50%;
+      background: #00aa40;
+      color: white;
+      font-size: 20px;
+      text-align: center;
+      line-height: 125px;
+      transform-origin: 100% 100%;
+      border-right: 2px solid #000;
+    }
+    #pointer {
+      width: 0;
+      height: 0;
+      border-left: 20px solid transparent;
+      border-right: 20px solid transparent;
+      border-bottom: 30px solid red;
+      margin: 0 auto;
+    }
+    #result {
+      font-size: 24px;
+      margin-top: 20px;
+    }
+    .info-buttons {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 10px;
+      margin-top: 30px;
+    }
+    .modal {
+      display: none;
+      position: fixed;
+      z-index: 10;
+      left: 0; top: 0;
+      width: 100%; height: 100%;
+      background: rgba(0,0,0,0.7);
+    }
+    .modal-content {
+      background: #222;
+      margin: 10% auto;
+      padding: 20px;
+      width: 80%;
+      border-radius: 8px;
+      color: #fff;
+    }
+    .close {
+      float: right;
+      font-size: 24px;
+      cursor: pointer;
+    }
+    .top-winners {
+      margin-top: 30px;
+    }
+    .top-winners ul {
+      list-style: none;
+      padding: 0;
+      font-size: 18px;
+    }
+  </style>
 </head>
 <body>
-    <h1>Добро пожаловать в VK Cash!</h1>
-    <a href="https://widget.donatepay.ru/widgets/page/7549bd7deeb167c930b7ab588b1aa54aa82e2910567619e1a834984b89495cf5?widget_id=6642901&sum=50" class="btn" target="_blank">Оплатить 50₽</a>
-    <a href="https://t.me/ZaberiMANY_Bot" class="btn" target="_blank">Забрать выигрыш</a>
-    <br>
-    <button class="btn" onclick="showModal('rules')">📜 Правила участия</button>
-    <button class="btn" onclick="showModal('faq')">❓ FAQ</button>
-    <button class="btn" onclick="showModal('policy')">📄 Политика</button>
 
-    <div id="rules" class="modal">
-        <div class="modal-content">
-            <span class="close" onclick="hideModal('rules')">&times;</span>
-            <h2>📜 Правила участия</h2>
-            <p>1. Участвуй в розыгрыше, оплатив 50₽.<br>
-            2. Получи шанс выиграть до 500₽.<br>
-            3. В случае выигрыша — забери деньги через Telegram-бота.</p>
-        </div>
+  <h1>Добро пожаловать в VK Cash!</h1>
+
+  <div id="pointer"></div>
+  <div id="wheel">
+    <span style="transform: rotate(0deg);">50₽</span>
+    <span style="transform: rotate(72deg);">100₽</span>
+    <span style="transform: rotate(144deg);">200₽</span>
+    <span style="transform: rotate(216deg);">500₽</span>
+    <span style="transform: rotate(288deg);">0₽</span>
+  </div>
+  <button class="button" id="spinBtn">Крутить колесо</button>
+  <button class="button" onclick="location.href='https://widget.donatepay.ru/widgets/page/7549bd7deeb167c930b7ab588b1aa54aa82e2910567619e1a834984b89495cf5?widget_id=6642901&sum=50'">Оплатить 50₽</button>
+  <button class="button" onclick="location.href='https://t.me/ZaberiMANY_Bot'">Забрать выигрыш</button>
+
+  <div class="info-buttons">
+    <button class="button" onclick="openModal('rules')">📜 Правила участия</button>
+    <button class="button" onclick="openModal('faq')">❓ FAQ</button>
+    <button class="button" onclick="openModal('policy')">📋 Политика</button>
+  </div>
+
+  <div class="top-winners">
+    <h2>🏆 Топ победителей</h2>
+    <ul id="winners">
+      <li>Дима — 305₽</li>
+      <li>Женя — 55₽</li>
+      <li>Саша — 143₽</li>
+      <li>Алина — 439₽</li>
+      <li>Лена — 62₽</li>
+    </ul>
+  </div>
+
+  <!-- Модалки -->
+  <div class="modal" id="rules">
+    <div class="modal-content">
+      <span class="close" onclick="closeModal('rules')">&times;</span>
+      <h2>📜 Правила участия</h2>
+      <p>Крути колесо и получай шанс на выигрыш. Первая прокрутка бесплатная, далее требуется оплата. Выигрыш можно забрать через Telegram-бота.</p>
     </div>
+  </div>
 
-    <div id="faq" class="modal">
-        <div class="modal-content">
-            <span class="close" onclick="hideModal('faq')">&times;</span>
-            <h2>❓ FAQ</h2>
-            <p><strong>Вопрос:</strong> Как работает система?<br>
-            <strong>Ответ:</strong> После оплаты вы участвуете в рулетке с шансом на выигрыш. Победителей выбирает генератор случайных чисел.</p>
-        </div>
+  <div class="modal" id="faq">
+    <div class="modal-content">
+      <span class="close" onclick="closeModal('faq')">&times;</span>
+      <h2>❓ FAQ</h2>
+      <p>Вы можете выиграть реальные деньги. Получение происходит через Telegram-бота после подтверждения оплаты.</p>
     </div>
+  </div>
 
-    <div id="policy" class="modal">
-        <div class="modal-content">
-            <span class="close" onclick="hideModal('policy')">&times;</span>
-            <h2>📄 Политика</h2>
-            <p>Все платежи добровольные. Участник соглашается с правилами игры. Деньги не возвращаются.</p>
-        </div>
+  <div class="modal" id="policy">
+    <div class="modal-content">
+      <span class="close" onclick="closeModal('policy')">&times;</span>
+      <h2>📋 Политика</h2>
+      <p>Сервис создан в развлекательных целях. Все действия подтверждаются добровольно. Возврат средств не осуществляется.</p>
     </div>
+  </div>
 
-    <div id="winners">
-        <h2>🏆 Топ победителей</h2>
-        <ul id="winnerList"></ul>
-    </div>
+  <div id="result"></div>
 
-    <script>
-        function showModal(id) {
-            document.getElementById(id).style.display = "block";
+  <script>
+    let firstSpinFree = true;
+    const spinBtn = document.getElementById('spinBtn');
+    const wheel = document.getElementById('wheel');
+    const result = document.getElementById('result');
+
+    spinBtn.addEventListener('click', () => {
+      if (!firstSpinFree) {
+        alert("Для следующей попытки нужно оплатить 50₽");
+        return;
+      }
+      let randomDegree = 3600 + Math.floor(Math.random() * 360);
+      wheel.style.transform = `rotate(${randomDegree}deg)`;
+      let prizes = ["50₽", "100₽", "200₽", "500₽", "0₽"];
+      let index = Math.floor(((randomDegree % 360) + 36) / 72) % 5;
+      setTimeout(() => {
+        let prize = prizes[index];
+        if (prize === "0₽") {
+          result.innerHTML = "Увы, ничего не выпало. Попробуй снова!";
+        } else {
+          result.innerHTML = `🎉 Ты выиграл ${prize}`;
         }
-        function hideModal(id) {
-            document.getElementById(id).style.display = "none";
-        }
+        firstSpinFree = false;
+      }, 5200);
+    });
 
-        const names = ["Игорь", "Саша", "Алина", "Дима", "Олег", "Настя", "Женя", "Рома", "Вика", "Лена"];
-        const winnerList = document.getElementById('winnerList');
+    function openModal(id) {
+      document.getElementById(id).style.display = 'block';
+    }
 
-        function updateWinners() {
-            winnerList.innerHTML = "";
-            for (let i = 0; i < 5; i++) {
-                const name = names[Math.floor(Math.random() * names.length)];
-                const amount = Math.floor(Math.random() * 500) + 50;
-                const li = document.createElement("li");
-                li.textContent = `${name} — ${amount}₽`;
-                winnerList.appendChild(li);
-            }
-        }
+    function closeModal(id) {
+      document.getElementById(id).style.display = 'none';
+    }
 
-        updateWinners();
-        setInterval(updateWinners, 300000); // Обновление каждые 5 минут
-    </script>
+    // Автообновление топа
+    setInterval(() => {
+      const fakeNames = ["Сергей", "Ника", "Игорь", "Оля", "Максим", "Таня"];
+      let list = document.getElementById('winners');
+      list.innerHTML = "";
+      for (let i = 0; i < 5; i++) {
+        const name = fakeNames[Math.floor(Math.random() * fakeNames.length)];
+        const amount = Math.floor(Math.random() * 450) + 50;
+        list.innerHTML += `<li>${name} — ${amount}₽</li>`;
+      }
+    }, 300000); // каждые 5 минут
+  </script>
+
 </body>
 </html>
