--- a/index.html
+++ b/index.html
@@ -153,17 +153,6 @@
     </div>
   </div>
 
-  <!-- Payeer Form -->
-  <form id="payeerForm" method="post" action="https://payeer.com/merchant/" target="_blank" style="display:none;">
-    <input type="hidden" name="m_shop" value="2210792738">
-    <input type="hidden" name="m_orderid" id="m_orderid">
-    <input type="hidden" name="m_amount" value="50.00">
-    <input type="hidden" name="m_curr" value="RUB">
-    <input type="hidden" name="m_desc" id="m_desc">
-    <input type="hidden" name="m_sign" id="m_sign">
-    <input type="submit" id="m_submit">
-  </form>
-
   <script>
     let spinning = false;
     let firstSpin = true;
@@ -214,28 +203,6 @@
       }, 5000);
     }
 
-    async function payWithPayeer() {
-      const shop = "2210792738";
-      const amount = "50.00";
-      const currency = "RUB";
-      const desc = btoa("VK Cash повторная попытка");
-      const orderId = "VKCASH_" + Date.now();
-      const data = `${shop}:${orderId}:${amount}:${currency}:${desc}:${secretKey}`;
-      const sign = await sha256(data);
-
-      document.getElementById("m_orderid").value = orderId;
-      document.getElementById("m_desc").value = desc;
-      document.getElementById("m_sign").value = sign.toUpperCase();
-      document.getElementById("payeerForm").submit();
-    }
-
-    function sha256(str) {
-      const buffer = new TextEncoder().encode(str);
-      return crypto.subtle.digest("SHA-256", buffer).then(hash => {
-        return Array.from(new Uint8Array(hash)).map(b => b.toString(16).padStart(2, '0')).join('');
-      });
-    }
-
     function generateCode() {
       const timestamp = Date.now();
       const random = Math.random().toString(36).substring(2, 6).toUpperCase();
@@ -260,6 +227,53 @@
 
     function closeModal() {
       document.getElementById("modal").style.display = "none";
+    }
+
+    function sha256(str) {
+      const buffer = new TextEncoder().encode(str);
+      return crypto.subtle.digest("SHA-256", buffer).then(hash => {
+        return Array.from(new Uint8Array(hash)).map(b => b.toString(16).padStart(2, '0')).join('');
+      });
+    }
+
+    async function payWithPayeer() {
+      const shop = "2210792738";
+      const amount = "50.00";
+      const currency = "RUB";
+      const descRaw = "VK Cash повторная попытка";
+      const desc = btoa(descRaw);
+      const orderId = "VKCASH_" + Date.now();
+      const key = secretKey;
+
+      const data = `${shop}:${orderId}:${amount}:${currency}:${desc}:${key}`;
+      const sign = await sha256(data);
+
+      // Создаем и отправляем форму в новом окне
+      const form = document.createElement("form");
+      form.method = "POST";
+      form.action = "https://payeer.com/merchant/";
+      form.target = "_blank";
+
+      const fields = {
+        m_shop: shop,
+        m_orderid: orderId,
+        m_amount: amount,
+        m_curr: currency,
+        m_desc: desc,
+        m_sign: sign.toUpperCase()
+      };
+
+      for (const name in fields) {
+        const input = document.createElement("input");
+        input.type = "hidden";
+        input.name = name;
+        input.value = fields[name];
+        form.appendChild(input);
+      }
+
+      document.body.appendChild(form);
+      form.submit();
+      document.body.removeChild(form);
     }
 
     setInterval(() => {
